--- a/CustomRPC/Strings.pl.resx
+++ b/CustomRPC/Strings.pl.resx
@@ -165,4 +165,7 @@ Możesz ją otworzyć w dowolnym momencie przyciskając F1 lub wchodząc do kart
     <value>Plik ustawień jest popsuty.
 Aby go zresetować kliknij Tak, lub Nie żeby wyjść.</value>
   </data>
+  <data name="errorInvalidPresetFile" xml:space="preserve">
+    <value>Nie można zimportować szablonu; pliku brakuje, jest popsuty lub źle sformatowany.</value>
+  </data>
 </root>
