--- a/CustomRPC/Strings.zh-Hant.resx
+++ b/CustomRPC/Strings.zh-Hant.resx
@@ -165,4 +165,7 @@
     <value>設定檔已損毀。
 按「是」重設，按「否」離開。</value>
   </data>
+  <data name="errorInvalidPresetFile" xml:space="preserve">
+    <value>預設檔案導入失敗；可能是文件丟失、損壞或格式錯誤。</value>
+  </data>
 </root>
