--- a/CustomRPC/Strings.th.resx
+++ b/CustomRPC/Strings.th.resx
@@ -165,4 +165,7 @@
     <value>ไฟล์การตั้งค่าของโปรแกรมเสียหาย 
 กด ใช่ เพื่อรีเซ็ตการตั้งค่า กด ไม่ใช่ เพื่อออก</value>
   </data>
+  <data name="errorInvalidPresetFile" xml:space="preserve">
+    <value>ไม่สามารถนำเข้าพรีเซ็ต; เนื่องจากไฟล์หายไปหรือเสียหายหรือฟอร์แมตของไฟล์ไม่ถูกต้อง</value>
+  </data>
 </root>
