--- a/CustomRPC/Strings.uk.resx
+++ b/CustomRPC/Strings.uk.resx
@@ -165,4 +165,7 @@
     <value>Файл налаштувань пошкоджено.
 Натисніть Так для сбросу параметрів, або Ні для виходу.</value>
   </data>
+  <data name="errorInvalidPresetFile" xml:space="preserve">
+    <value>Не вдалося імпортувати пресет; файл відсутній, пошкоджений або неправильно відформатований.</value>
+  </data>
 </root>
