Implemented analytics, tidied up MainForm.cs, migrated from packages.config to PackageReference

--- a/CustomRPC/MainForm.ru.resx
+++ b/CustomRPC/MainForm.ru.resx
@@ -482,4 +482,7 @@
   <data name="autoconnectToolStripMenuItem.Text" xml:space="preserve">
     <value>Подключаться автоматически</value>
   </data>
+  <data name="allowAnalyticsToolStripMenuItem.Text" xml:space="preserve">
+    <value>Разрешить аналитику</value>
+  </data>
 </root>
