--- a/CustomRPC/MainForm.resx
+++ b/CustomRPC/MainForm.resx
@@ -349,7 +349,7 @@
     <value>180, 22</value>
   </data>
   <data name="allowAnalyticsToolStripMenuItem.Text" xml:space="preserve">
-    <value>Allow analytics</value>
+    <value>Allow Analytics</value>
   </data>
   <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
     <value>177, 6</value>
