--- a/CustomRPC/MainForm.pt-BR.resx
+++ b/CustomRPC/MainForm.pt-BR.resx
@@ -257,7 +257,7 @@
     <value>194, 22</value>
   </data>
   <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
-    <value>Sobre…</value>
+    <value>Sobre...</value>
   </data>
   <data name="helpToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>50, 20</value>
