--- a/CustomRPC/Strings.da.resx
+++ b/CustomRPC/Strings.da.resx
@@ -165,4 +165,11 @@ Du kan åben den til enhver tid ved at trykke på Hjælp -&gt; Åben Manual elle
     <value>Indstillings filen er korrupt.
 Tryk Ja for at nulstille den, tryk Nej for at afslutte.</value>
   </data>
+  <data name="errorInvalidPresetFile" xml:space="preserve">
+    <value>Indlæsning af forindstilling fejlet; filen er enten manglende, korrupt eller fejl formateret.</value>
+  </data>
+  <data name="askAnalyticsConsent" xml:space="preserve">
+    <value>Vil du tillade CustomRP at sende forbrugs analyser til udviklieren?
+(Alt data er ikke forbundet til dig som bruger.)</value>
+  </data>
 </root>
