--- a/CustomRPC/Strings.th.resx
+++ b/CustomRPC/Strings.th.resx
@@ -168,4 +168,8 @@
   <data name="errorInvalidPresetFile" xml:space="preserve">
     <value>ไม่สามารถนำเข้าพรีเซ็ต; เนื่องจากไฟล์หายไปหรือเสียหายหรือฟอร์แมตของไฟล์ไม่ถูกต้อง</value>
   </data>
+  <data name="askAnalyticsConsent" xml:space="preserve">
+    <value>คุณอนุญาตให้ CustomRP ส่งการวิเคราะห์การใช้งานของคุณไปยังนักพัฒนาหรือไม่
+(ข้อมูลทั้งหมดถูกทำให้เป็นแบบไม่ระบุตัวตน)</value>
+  </data>
 </root>
